--- a/image.css
+++ b/image.css
@@ -1,37 +1,34 @@
 image.css
 
-/* (A) WRAPPER */
-.fullwrap {
-  position: relative; /* required for (c2) */
-  max-width: 500px; /* optional */
+/* Parent Container */.content_img{
+ position: relative;
+ width: 200px;
+ height: 200px;
+ float: left;
+ margin-right: 10px;
 }
- 
-/* (B) RESPONSIVE IMAGE */
-.fullwrap img { width: 100%; }
- 
-/* (C) CAPTION */
-.fullcap {
-  /* (C1) DIMENSIONS */
-  box-sizing: border-box;
-  width: 100%;
-  height: 100%;
- 
-  /* (C2) POSITION */
-  position: absolute;
-  top: 0; left: 0;
-  text-align: center;
-  padding-top: 30%;
- 
-   /* (C3) COLORS */
-  background-color: rgba(0, 0, 0, 0.7);
-  color: white;
+
+/* Child Text Container */.content_img div{
+ position: absolute;
+ bottom: 40%;
+ right: 40%;
+ background: black;
+ color: white;
+ margin-bottom: 5px;
+ font-family: sans-serif;
+ opacity: 0;
+ visibility: hidden;
+ -webkit-transition: visibility 0s, opacity 0.5s linear; 
+ transition: visibility 0s, opacity 0.5s linear;
 }
- 
-/* (D) SHOW/HIDE */
-.fullcap {
-  visibility: none; opacity: 0;
-  transition: opacity 0.3s;
+
+/* Hover on Parent Container */.content_img:hover{
+ cursor: pointer;
 }
-.fullwrap:hover .fullcap {
-  visibility: visible; opacity: 1;
+
+.content_img:hover div{
+ width: 150px;
+ padding: 8px 15px;
+ visibility: visible;
+ opacity: 0.7; 
 }
