--- a/image.css
+++ b/image.css
@@ -5,7 +5,7 @@ image.css
 
 /* Parent Container */.content_img{
  position: relative;
- width: 200px;
+ width: 400px;
  height: 200px;
  float: left;
  margin-right: 10px;
@@ -15,6 +15,8 @@ image.css
  position: absolute;
  bottom: 40%;
  top: 40%;
+ left: 20% ;
+ right: 20%;
  background: white;
  color: black;
  margin-bottom: 5px;
