--- a/image.css
+++ b/image.css
@@ -17,7 +17,7 @@ image.css
  top: 40%;
  left: 20% ;
  right: 20%;
- background: white;
+ background: powderblue;
  color: black;
  margin-bottom: 5px;
  font-family: sans-serif;
