--- a/image.css
+++ b/image.css
@@ -1,5 +1,10 @@
 image.css
 
+.center{
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  width: 50%; }
 
 /* CSS source code: Makitweb */
 
